completed object init lab

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,12 @@
    },
    "outputs": [],
    "source": [
-    "# Define Driver Class Here"
+    "# Define Driver Class Here\n",
+    "class Driver:\n",
+    "    def __init__(self, first, last, occupation = \"driver\"):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.occupation = occupation"
    ]
   },
   {
@@ -155,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
